--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "2.0"
 services:
   main:
-    image: tverous/pytorch-notebook:${SOFTWARE_VERSION_TAG}
+    image: quay.io/jupyter/pytorch-notebook:${SOFTWARE_VERSION_TAG}
     restart: always
     environment:
       - JUPYTER_TOKEN=${ADMIN_PASSWORD}
     volumes:
-      - ./local_vol:/docker_vol
+      - ./storage:/home/jovyan
     ports:
       - 172.17.0.1:3895:8888
     deploy:
